--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "onsenui-v2-angular1-tabbar",
+    "version": "2.0.0",
     "cordova": {
         "plugins": {
             "cordova-custom-config": {},
@@ -19,7 +20,7 @@
         "dev": "browser-sync start -s www/ --watch --port 8080 --ui-port 8081"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.5",
+        "browser-sync": "^2.26.7",
         "cordova": "^9.0.0"
     }
 }
